Solved background white space problem

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   /* background: #333; */
   background-image: url(https://www.indiaheritagewalks.org/sites/default/files/styles/frontpage_slideshow/public/2021-03/2021-03-25.jpg?itok=FspYxJ5X);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .App {
